--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,6 +1,11 @@
 /* CSS file for todoList.html */
 #container {
-  background: grey;
+  border: 2px solid gray;
   width: 360px;
   margin: 0 auto;
+}
+
+.completed {
+  color: gray;
+  text-decoration: line-through;
 }
