--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -29,6 +29,9 @@ ul {
 
 body {
   font-family: Roboto;
+  background: #00C9FF;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #92FE9D, #00C9FF);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #92FE9D, #00C9FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 li {
@@ -49,6 +52,8 @@ input {
   padding: 13px 13px 13px 20px;
   box-sizing: border-box;
   color: #2980b9;
+  /* make an invisible border to help flush out the input field so that it looks clean with the other items */
+  border: 3px solid rgba(0, 0, 0, 0);
 }
 
 /* insert the focus effect whenever you click on the input field */
@@ -57,4 +62,27 @@ input:focus {
   border: 3px solid #2980b9;
   /* use the line below to get rid of the default selection border that came with the browser. */
   outline: none;
+}
+
+.fa-plus {
+  float: right;
+}
+
+li span {
+  background: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  width: 0;
+  display: inline-block;
+  transition: 0.2s linear;
+  /* To make the icon disappear when not hovering over it, make the opacity zero */
+  opacity: 0;
+}
+
+/* when we hover over an <li>, we want to select a <span> that's inside, and set the width to be 40px */
+li:hover span {
+  width: 40px;
+  opacity: 1.0;
 }
